feat: initial commit with CMS, admin content, Stripe endpoints scaffold, GCal sync, analytics schema

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -192,6 +192,7 @@
     "sessionsUnit": "Sitzungen",
     "priceInquiry": "Preis auf Anfrage",
     "bookPackage": "Paket buchen",
+    "buyNow": "Jetzt kaufen",
     "regularPriceLabel": "Regulärer Preis"
   },
   "testimonials": {
