--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -199,6 +199,7 @@
     "sessionsUnit": "sessions",
     "priceInquiry": "Price on request",
     "bookPackage": "Book package",
+    "buyNow": "Buy now",
     "regularPriceLabel": "Regular price"
   },
   "testimonials": {
