--- a/public/locales/hr.json
+++ b/public/locales/hr.json
@@ -192,6 +192,7 @@
     "sessionsUnit": "seansi",
     "priceInquiry": "Cijena na upit",
     "bookPackage": "Rezerviraj paket",
+    "buyNow": "Kupi sada",
     "regularPriceLabel": "Redovna cijena"
   },
   "testimonials": {
