--- a/public/locales/hu.json
+++ b/public/locales/hu.json
@@ -192,6 +192,7 @@
     "sessionsUnit": "alkalom",
     "priceInquiry": "Ár ajánlatkérésre",
     "bookPackage": "Csomag foglalása",
+    "buyNow": "Vásárlás",
     "regularPriceLabel": "Eredeti ár"
   },
   "testimonials": {
