--- a/public/locales/sl.json
+++ b/public/locales/sl.json
@@ -199,6 +199,7 @@
     "sessionsUnit": "seans",
     "priceInquiry": "Cena na poizvedbo",
     "bookPackage": "Rezerviraj paket",
+    "buyNow": "Kupi zdaj",
     "regularPriceLabel": "Redna cena"
   },
   "testimonials": {
